--- a/Pac-Man/index.html
+++ b/Pac-Man/index.html
@@ -11,7 +11,12 @@
 </head>
 
 <body>
+    <h1>Pacman</h1>
+    <h3>Score:<span id="score"></span></h3>
+    <div class="grid">
+    </div>
 
+    <script src="./app.js"></script>
 </body>
 
 </html>
